xml/src1/objects/Milestones__c.object
<CustomObject>
    <description>The Milestones of the Contact</description>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age Calculation</description>
        <formula>IF($RecordType.Name = &apos;Birth Date&apos; &amp;&amp;  ISPICKVAL( Milestone__c ,&apos;Birth Date&apos;) &amp;&amp; NOT( ISBLANK(Birth_Date__c) ) &amp;&amp; ISBLANK(Death_Date__c)
, FLOOR((TODAY()-Birth_Date__c+1)/365.2425)
,  IF($RecordType.Name = &apos;Death Date&apos; &amp;&amp;  ISPICKVAL( Milestone__c ,&apos;Death Date&apos;)
, 0
,null) )</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base__c</fullName>
        <description>Base of the Military</description>
        <inlineHelpText>Enter military base name where contact is deployed</inlineHelpText>
        <label>Base</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <description>Birth Date of Contact</description>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Any details that need to be known on the milestone</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>For Milestone Interview</description>
        <inlineHelpText>Enter date UMEA interview was conducted</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Master detail relationship</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Start date of the Milestone</description>
        <inlineHelpText>Enter Milestone start date here</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Death_Date__c</fullName>
        <description>Death Date of the Contact</description>
        <label>Death Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployed_to_City__c</fullName>
        <description>Contact deployed to which city</description>
        <inlineHelpText>Enter city where contact is deployed</inlineHelpText>
        <label>Deployed to City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployed_to_Country__c</fullName>
        <inlineHelpText>Select country where contact is deployed</inlineHelpText>
        <label>Deployed to Country</label>
        <picklist>
            <controllingField>Milestone__c</controllingField>
            <picklistValues>
                <fullName>UNITED STATES OF AMERICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFRICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA &amp; BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTILLES, NETHERLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARABIA, SAUDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <description>End date for the Military posting</description>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GBHEM_DATACENTER_PERSONID__c</fullName>
        <description>GBHEM DataCenter PersonID</description>
        <label>GBHEM DATACENTER PERSONID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DOB__c</fullName>
        <description>For migrating Data</description>
        <label>GBHEM_DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <description>Milestones of the contact</description>
        <label>Milestone</label>
        <picklist>
            <picklistValues>
                <fullName>Affiliate Member with a Vote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bishop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bishop Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Deacon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Elder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Local Pastor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Undecided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Lay Minister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deacon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death in Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-Time Local Pastor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honorable Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave of Absence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minister Other Denomination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other than Honorable Discharge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestones_Other__c</fullName>
        <description>Other Milestones than in Picklist</description>
        <label>Milestone Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <description>For Milestone Interview</description>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date Military posting</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UniqueBirth__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Birth date for each contact should be Unique.Only Once Entered</description>
        <label>UniqueBirth</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UniqueDeath__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique death.Only to have to have one death date for each contact</description>
        <label>UniqueDeath</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Endorsing Interviews Year</description>
        <inlineHelpText>Select year UMEA endorsing interview is/was to be conducted</inlineHelpText>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2033</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Milestone-{00000000}</displayFormat>
        <label>Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>Contact_00NJ0000000Fj5IMAS</fullName>
        <active>true</active>
        <field>Contact.Milestone__c</field>
        <filterItems>
            <field>Milestones__c.Milestone__c</field>
            <operation>equals</operation>
            <value>Birth</value>
        </filterItems>
        <filterItems>
            <field>Milestones__c.Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Milestones__c.Age__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contact_Milestone</name>
    </namedFilters>
    <pluralLabel>Milestones</pluralLabel>
    <recordTypes>
        <fullName>Birth_Date</fullName>
        <active>true</active>
        <description>The date of birth of a contact</description>
        <label>Birth Date</label>
    </recordTypes>
    <recordTypes>
        <fullName>Candidacy_Milestones</fullName>
        <active>true</active>
        <description>The date a candidate was certified, denied, enrolled or withdrew from the Candidacy program</description>
        <label>Candidacy Milestones</label>
    </recordTypes>
    <recordTypes>
        <fullName>Clergy_Membership</fullName>
        <active>true</active>
        <description>The date of provisional and full conference membership</description>
        <label>Clergy Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Death_Date</fullName>
        <active>true</active>
        <description>The date of death of a contact</description>
        <label>Death Date</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Milestones</fullName>
        <active>true</active>
        <description>Significant dates in a contacts life such as a marriage or a name change</description>
        <label>General Milestones</label>
    </recordTypes>
    <recordTypes>
        <fullName>Military</fullName>
        <active>true</active>
        <description>The date a military contact was deployed or discharged.</description>
        <label>Military</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retirement</fullName>
        <active>true</active>
        <description>The date a contact retired from work, the annual conference, chaplaincy, or other retirements</description>
        <label>Retirement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Milestone_Death_Validation</fullName>
        <active>true</active>
        <description>Death date should not be after Today</description>
        <errorConditionFormula>IF( ISPICKVAL( Milestone__c ,&apos;Death Date&apos;),
IF (NOT (ISNULL( Death_Date__c )), Death_Date__c &gt;  TODAY() ,FALSE),
null)</errorConditionFormula>
        <errorDisplayField>Death_Date__c</errorDisplayField>
        <errorMessage>Please enter the Death Date before or today Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Milestone_Disable_Milestone_Other</fullName>
        <active>true</active>
        <description>If &apos;Milestone&apos; is not Other/Specify then &apos;Milestone Other&apos; should be disabled</description>
        <errorConditionFormula>AND(NOT( ISPICKVAL(  Milestone__c  ,&quot;Other/Specify&quot;)) ,NOT( ISBLANK(  Milestones_Other__c  ) ))</errorConditionFormula>
        <errorDisplayField>Milestones_Other__c</errorDisplayField>
        <errorMessage>Milestone Other should not contain a value when Milestone is NOT &apos;Other/Specify&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Milestone_others</fullName>
        <active>true</active>
        <description>If Milestones is &apos;Other/Specify&apos; then Milestone Others Field is Required</description>
        <errorConditionFormula>AND( ISPICKVAL(  Milestone__c  ,&quot;Other/Specify&quot;) , ISBLANK( Milestones_Other__c ) )</errorConditionFormula>
        <errorDisplayField>Milestones_Other__c</errorDisplayField>
        <errorMessage>Please enter a value in Milestone Other when &apos;Milestone&apos; is &apos;others/Specify&apos;.</errorMessage>
    </validationRules>
</CustomObject>